# KChatQML

./: .gitmodules  CMakeLists.txt  README.md  README_zh.md
cmake/: load_3rdparty.cmake  utils.cmake
qmake/: KWeChatQml.pri  KWeChatQml.pro
scripts/: windows-mingw-build.bat
src/: CMakeLists.txt  KChatApp.qrc  addfile.bat  build.bat
src/KGlobal/: KGlobal.h  common.hpp  version.hpp
src/KQML/: App.qml
src/KQML/Chat/: ChatView.qml  KChatInfoPop.qml  KChatPanel.qml  KChatRightMenu.qml  KUserInfo.qml
src/KQML/ChatBase/: KBaseChatPanel.qml  KBaseDelegate.qml  KBaseListDelegate.qml
src/KQML/ChatBase/Items/: BaseDelegate.qml  EmoticonsDelegate.qml  PictureDelegate.qml  QuoteDelegate.qml  TextDelegate.qml  VideoDelegate.qml  VoiceDelegate.qml  WithdrawDelegate.qml
src/KQML/Component/: KAppBar.qml  KChartNavigationView.qml  KCheckBox.qml  KClipImage.qml  KComboBox.qml  KContentDialog.qml  KDelegateItem.qml  KFlickable.qml  KIcon.qml  KIconButton.qml  KImage.qml  KImageButton.qml  KListView.qml  KLoader.qml  KMenu.qml  KMenuItem.qml  KMenuSeparator.qml  KMenus.qml  KPage.qml  KPopTextBox.qml  KPopWindow.qml  KPopup.qml  KRadioButton.qml  KRadioButtons.qml  KScrollTextBox.qml  KShadow.qml  KStackLayout.qml  KTabView.qml  KText.qml  KTextBox.qml  KTextButton.qml  KTextEdit.qml  KToggleSwitch.qml  KToolTip.qml  KWindow.qml
src/KQML/Config/: KGlHelp.qml  KLog.js  qmldir
src/KQML/Config/KTest/: KTestData.qml  TBaseTable.qml  TContact.qml  TImage.qml  TMessage.qml
src/KQML/Config/Languages/: EN.qml  ZH_CN.qml
src/KQML/Config/Theme/: DarkTheme.qml  ThemeBase.qml  WhiteTheme.qml
src/KQML/Config/Theme/ThemeElement/: ButtonStyle.qml  ChatStyle.qml  ColorSetStyle.qml  DialogStyle.qml  ListViewStyle.qml  LoginStyle.qml  RadioButtonStyle.qml  SettingStyle.qml  SwitchButtonStyle.qml  TextEditStyle.qml  TextStype.qml
src/KQML/Contast/: KContastPanel.qml
src/KQML/Favorites/: KFavoritesPanel.qml
src/KQML/Login/: AutoLoginPage.qml  BasePage.qml  LoginAppBar.qml  LoginIngPage.qml  LoginWindow.qml  ScanQRCodePage.qml  SettingPage.qml
src/KQML/Settings/: BaseSetPage.qml  KAboutSet.qml  KAccountSet.qml  KCommonSet.qml  KFileManagerSet.qml  KLabelSwitchButton.qml  KMessageNotifySet.qml  KSetModelData.js  KSettingDialog.qml  KShortcutSet.qml  KTipDialog.qml
src/KQML/Window/: KChatWindow.qml  KImagePreviewWindow.qml  KLockWindow.qml  KNavigationFooterItem.qml  KNavigationItems.qml  KNavigationView.qml  MainWindow.qml  TestWindow.qml
src/KQML/WindowExt/: ItemModelData.js  KBaseTabPage.qml  KMiniProgramPage.qml  KProgramCard.qml  KSearchPage.qml  KStoriesPage.qml  KTabWindow.qml
src/KQML/WindowExt/Items/: ProgramBlockItem.qml  ProgramCard.qml  ProgramItem.qml  ProgramItems.qml
src/KUtil/: CMakeLists.txt  KFileUtil.cpp  KFileUtil.h  KHelper_p.h  KJsonHelp.cpp  KJsonHelp.h  KUtil.pro  KUtil_global.h  PropertyHelper.h
src/KWeChatClient/: CMakeLists.txt  KWeChatClient.pro
src/KWeChatClient/Client/: CMakeLists.txt  KChatHelp.cpp  KChatHelp.h  KStartManager.cpp  KStartManager.h  SettingsHelper.cpp  SettingsHelper.h  main.cpp
src/KWeChatClient/Interface/: CMakeLists.txt  Interface.pri  KChatItem.cpp  KChatItem.h  KInterface.cpp  KInterface.h
src/KWeChatClient/Interface/Component/: KRectangle.cpp  KRectangle.h  KRoundedImage.cpp  KRoundedImage.h  KSystemTray.cpp  KSystemTray.h
src/KWeChatClient/Interface/private/: KChartItem_p.h
